--- a/app/views/themes/bioart/pages/show.html.haml
+++ b/app/views/themes/bioart/pages/show.html.haml
@@ -38,7 +38,31 @@
           - if @page.image?
             .page_image= image_tag @page.image.url.gsub(/development/, 'production')
           - elsif !@page.photos.empty?
-            .page_image= image_tag @page.photos.first.url.gsub(/development/, 'production')
+            .page_image
+              .image_carousel{style: @page.photos.size > 1 ? "margin-bottom: 135px" : "margin-bottom: 1rem"}
+    
+                - @page.photos.each do |photo|
+                  .slide[photo]
+                    = image_tag photo.image.url(:standard).gsub('development', 'production'), align: :center
+                    .thumb= image_tag photo.image.url(:thumb).gsub('development', 'production')
+                = content_for :jquery do
+                  :plain
+                    $('.image_carousel').slick({infinite: true,
+                      arrows: true,
+                      slide: '.slide',
+      
+                      adaptiveHeight: false,
+                      prevArrow: '<button type="button" data-role="none" class="slick-prev slick-arrow" aria-label="Previous" role="button" style="display: inline-block;"></button>',
+                      nextArrow: '<button type="button" data-role="none" class="slick-next slick-arrow" aria-label="Next" role="button" style="display: inline-block;"></button>',
+                      dots: true,
+                      customPaging: function(slick,index) {
+                         return slick.$slides.eq(index).find('.thumb').html() ;
+                      },
+                      variableWidth: false,
+                      autoplay: true,
+                      autoplaySpeed: 2400,
+                      slidesToScroll: 1,
+                    });
 
 
           .excerpt
