--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -11,7 +11,12 @@
     = csrf_meta_tags
     %link{:href => "/feed", :rel => "alternate", :title => "Bioartsociety RSS feed", :type => "application/rss+xml"}/
     %link{:href => "https://fonts.googleapis.com/css?family=Rubik|Titillium+Web|Abel", :rel => "stylesheet", :type => "text/css"}/
-    
+    - if @post
+      - unless @post.soundfiles.empty?
+        %script{:src => "//cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.3.2/wavesurfer.min.js"}
+    - if @page
+      - unless @page.soundfiles.empty?
+        %script{:src => "//cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.3.2/wavesurfer.min.js"}
     - if @project
       - unless @project.custom_heading_background_colour.blank?
         :css
