--- a/app/assets/themes/bioart/stylesheets/application.css.scss
+++ b/app/assets/themes/bioart/stylesheets/application.css.scss
@@ -21,6 +21,7 @@
  *= require bioart/stylesheets/posts
  *= require bioart/stylesheets/searches
  *= require slick
+ *= require video-js
  *= require jquery-ui
  */
 
