--- a/app/views/themes/bioart/posts/_postspage.html.haml
+++ b/app/views/themes/bioart/posts/_postspage.html.haml
@@ -2,9 +2,12 @@
 - @posts.each do |post|
   .post.column
     .post_image{style: "background: url(#{post.photos.empty? ? (@project.nil? ? theme_image_path('placeholder.png') : @project.image.url(:box) ) :  post.photos.first.image.url(:box).gsub('development', 'production')}) #{!@project.nil? && post.photos.empty? ? 'center' : 'center/cover'} no-repeat"}
-      - unless @project
+      - if post.project
         .hashtag
-          = "##{post.node.name}"
+          = "#{post.project.to_hashtag}"
+      - elsif post.node != @node
+        .hashtag
+          = "#{post.node.to_hashtag}"
     .post_content
       .title= link_to post.title, post
       .excerpt= truncate_html(sanitize(post.body, tags: %w{b strong bold i italic em u underline br}), length: 150)  
