--- a/app/views/themes/bioart/admin/activities/_form.html.haml
+++ b/app/views/themes/bioart/admin/activities/_form.html.haml
@@ -16,7 +16,8 @@
     .small-12.large-8.columns= f.input :activitytype, input_html: {:required => ''}
   .row
     .small-12.large-8.columns= f.input :place_slug, label: 'Slug for exhibition URL'
-
+  .row
+    .small-12.large-8.columns= f.input :project, label: 'Associate to project?', hint: 'If selected, a link to this project will be created on the activity page'
   .row
     .small-12.columns= f.input :description, as: :text, input_html: {class: :ckeditor}
   .row
