--- a/app/views/themes/bioart/posts/show.html.haml
+++ b/app/views/themes/bioart/posts/show.html.haml
@@ -11,19 +11,20 @@
       
   .row
     .small-12.columns
-      - unless @post.photos.empty?
+      - unless @post.hide_featured_image == true
+        - unless @post.photos.empty?
         
-        .post_image
-          - if @post.photos.size == 1
+          .post_image
+            - if @post.photos.size == 1
 
-            = image_tag @post.photos.first.image.url.gsub('development', 'production')
-          - else
-            .image_carousel{style: @post.photos.size > 1 ? "margin-bottom: 135px" : "margin-bottom: 1rem"}
+              = image_tag @post.photos.first.image.url.gsub('development', 'production')
+            - else
+              .image_carousel{style: @post.photos.size > 1 ? "margin-bottom: 135px" : "margin-bottom: 1rem"}
     
-              - @post.photos.each do |photo|
-                .slide[photo]
-                  = image_tag photo.image.url(:standard).gsub('development', 'production'), align: :center
-                  .thumb= image_tag photo.image.url(:thumb).gsub('development', 'production')
+                - @post.photos.each do |photo|
+                  .slide[photo]
+                    = image_tag photo.image.url(:standard).gsub('development', 'production'), align: :center
+                    .thumb= image_tag photo.image.url(:thumb).gsub('development', 'production')
       - unless @post.videos.empty?                  
         - @post.videos.each do |video|
           - if video.videofile.url =~ /mp4$/
