--- a/app/assets/themes/hybrid_matters/stylesheets/application.css.scss
+++ b/app/assets/themes/hybrid_matters/stylesheets/application.css.scss
@@ -499,3 +499,9 @@ select optgroup option {
 option.exhibition_select {
   padding-left: 1.2rem;
 }
+
+.main-container.errors {
+
+  padding: 10rem 0 5rem 0;
+
+}
