--- a/app/assets/themes/bioart/stylesheets/base.css.scss
+++ b/app/assets/themes/bioart/stylesheets/base.css.scss
@@ -68,6 +68,66 @@ header {
   line-height: 1em;
   padding: 0.75rem 0.5rem;
 }
+
+
+// related content
+
+.related_container {
+  .offset {
+    h1 {
+      padding: 1.6rem 0;
+      font-family: $rubik;
+      color: #000;
+      margin-left: -2rem;
+      text-transform: uppercase;
+      font-size: 4.424em;
+      @include breakpoint(small only) {
+        font-size: 3.4em;
+        padding: 2.24rem 0;
+      }
+      span.white {
+        color: #FFF;
+      }
+    }
+  }
+  
+  a.related {
+    .related_image {
+      overflow: hidden;
+      height: 392px;
+      .hashtag {
+        float: left;
+        margin: 0.813em 0.688em;
+        font-family: $titillium;
+        color: #333;
+        font-size: 1rem;
+        background-color: $headerblue;
+        padding: 0.5em 0.313em;
+      }
+    }
+    .related_content {
+      padding: 1.875em 2.625em;
+      background-color: white;
+      margin-bottom: 2.2rem;
+      opacity: 0.9;
+      .title {
+        font-family: $abel;
+        font-size: 1.4em;
+        line-height: 1.6rem;
+        font-weight: bold;
+        margin-bottom: 1em;
+        color: #000;
+      }
+      .excerpt, .excerpt p {
+        font-family: $titillium;
+        font-size: 1rem;
+        line-height: 1.25em;
+        color: #000;
+      }
+    }
+  }
+}
+
 footer {
   background: $headerblue url(/assets/bioart/images/layout/green_dots_small.png) repeat;
   min-height: 7.5rem;
