--- a/app/views/themes/bioart/admin/posts/_form.html.haml
+++ b/app/views/themes/bioart/admin/posts/_form.html.haml
@@ -47,6 +47,8 @@
     .small-6.large-3.columns= f.input :published_at, as: :string,  :input_html => { :class => "datetime_picker", value: f.object.published_at.blank? ? '' : f.object.published_at.strftime('%Y-%m-%d %H:%M') }
   .row.expanded
     .small-10.medium-6.columns= f.input :sticky, label: 'Make post sticky', hint: 'Will appear in floating blue box atop site', as: :boolean   
+  .row
+    .small-12.large-8.columns= f.input :tags, hint: 'Separate with commas'     
   .row.expanded
     .small-10.medium-6.columns= f.input :short_abstract, label: 'Few sentences to show if sticky:', as: :text
   .row.expanded
