--- a/app/views/themes/hybrid_matters/layouts/symposium.html.haml
+++ b/app/views/themes/hybrid_matters/layouts/symposium.html.haml
@@ -71,7 +71,7 @@
                     %select.secondary_nav_select
                       %option{selected: (controller.controller_name == 'pages' ? (@page.slug == 'hybrid-matters-symposium' ? :active : false) : false), value: page_path('statement') } Statement
                       %option{selected: (controller.controller_name == 'pages' ? (@page.slug == 'schedule' ? :active : false) : false), value: page_path('schedule')} Schedule
-                      %option{class: controller.controller_name == 'registrations' ? :active : false, value: new_registration_path } Registration
+                      %option{class: controller.controller_name == 'symposium_registrations' ? :active : false, value: new_symposium_registration_path } Registration
                       %option{selected: (controller.controller_name == 'pages' ? :selected : false), value: '/speakers'} Speakers
                       %option{selected: (controller.controller_name == 'posts' ? :selected : false), value: posts_path } Blog
                       -#%option{selected: (controller.controller_name == 'events' ? :selected : false), value: events_path} Events
@@ -82,7 +82,7 @@
                   = render partial: 'layouts/dropdown'
                   %li.statement{class: controller.controller_name == 'pages' ? (@page.slug == 'hybrid-matters-symposium' ? :active : false) : false}= link_to 'Statement', page_path('statement')
                   %li.statement{class: controller.controller_name == 'pages' ? (@page.slug == 'schedule' ? :active : false)  : false}= link_to 'Schedule', page_path('schedule')
-                  %li.statement{class: controller.controller_name == 'registrations' ? :active : false}= link_to 'Registration', new_registration_path
+                  %li.statement{class: controller.controller_name == 'symposium_registrations' ? :active : false}= link_to 'Registration', new_symposium_registration_path
                   %li{class: controller.controller_name == 'participants' ? :active : false}= link_to 'Speakers', '/speakers'
                   %li{class: controller.controller_name == 'posts' ? :active : false}= link_to 'Blog', posts_path
                   
