--- a/app/views/themes/hybrid_matters/layouts/symposium.html.haml
+++ b/app/views/themes/hybrid_matters/layouts/symposium.html.haml
@@ -101,7 +101,7 @@
                     %span Statement
                   %li.schedule{class: controller.controller_name == 'pages' ?  (@page.slug == 'schedule' ? :active  : false) : false}
                     %span Schedule
-                  %li.registration{class: controller.controller_name == 'registrations' ? :active : false}
+                  %li.registration{class: controller.controller_name == 'symposium_registrations' ? :active : false}
                     %span Registration
                   %li.participants{class: controller.controller_name == 'participants' ? :active : false}
                     %span Speakers
