--- a/app/assets/themes/hybrid_matters/stylesheets/application.css.scss
+++ b/app/assets/themes/hybrid_matters/stylesheets/application.css.scss
@@ -18,6 +18,7 @@
  *= require hybrid_matters/stylesheets/partners
  *= require hybrid_matters/stylesheets/pages
  *= require hybrid_matters/stylesheets/activities
+ *= require hybrid_matters/stylesheets/invitations
  *= require hybrid_matters/stylesheets/calls
  *= require hybrid_matters/stylesheets/posts
  *= require hybrid_matters/stylesheets/field_notes
