investigations floating box fix

--- a/app/assets/themes/hybrid_matters/stylesheets/application.css.scss
+++ b/app/assets/themes/hybrid_matters/stylesheets/application.css.scss
@@ -19,6 +19,7 @@
  *= require hybrid_matters/stylesheets/pages
  *= require hybrid_matters/stylesheets/activities
  *= require hybrid_matters/stylesheets/invitations
+*= require hybrid_matters/stylesheets/investigations
  *= require hybrid_matters/stylesheets/calls
  *= require hybrid_matters/stylesheets/posts
  *= require hybrid_matters/stylesheets/field_notes
