--- a/app/views/themes/hybrid_matters/layouts/investigations.html.haml
+++ b/app/views/themes/hybrid_matters/layouts/investigations.html.haml
@@ -5,7 +5,7 @@
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
     = display_meta_tags :site => 'HYBRID MATTERs investigations', og: {image: "http://#{request.host}#{image_path('/assets/hybrid_matters/images/hm_logo.png')}" }
     = stylesheet_link_tag 'hybrid_matters/stylesheets/application', media: 'all'
-    = stylesheet_link_tag 'hybrid_matters/stylesheets/investigations', media: 'all'
+    -#= stylesheet_link_tag 'hybrid_matters/stylesheets/investigations', media: 'all'
     = javascript_include_tag 'hybrid_matters/javascripts/application', 'data-turbolinks-track' => true 
     - if controller.controller_name == 'partners'
       %script{:src => "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_maps_api_key}", :type => "text/javascript"}
