--- a/app/views/themes/bioart/activities/_activitiespage.html.haml
+++ b/app/views/themes/bioart/activities/_activitiespage.html.haml
@@ -1,12 +1,12 @@
 
 - @activities.reverse.each do |activity|
-  .activity.column
+  = link_to activity, class: [:activity, :column] do
     .activity_image{style: "background: url(#{activity.photos.empty? ? theme_image_path('placeholder.png') : activity.photos.first.image.url(:box)}) center/cover no-repeat"}
       - if @project
         .hashtag
           = "##{@project.name}"
     .activity_content
-      .title= link_to activity.name, activity
+      .title= activity.name
       .date= date_range(activity.start_at, activity.end_at)
       %p= activity.location
       .excerpt= truncate_html(sanitize(activity.description, tags: %w{b strong bold i italic em u underline br}), length: 150)  
