--- a/app/assets/themes/bioart/stylesheets/base.css.scss
+++ b/app/assets/themes/bioart/stylesheets/base.css.scss
@@ -12,7 +12,7 @@ header {
       }
     a {
       .logo {
-        font-family: 'Myanmar Sangam MN';
+        font-family: $rubik;
         font-size: 3.081em;
         line-height: 1em;
         font-weight: 600;
@@ -32,6 +32,7 @@ header {
         }
         font-family: $titillium;
         padding: 0 0 0 0.15em;
+        font-weight: 600;
         a {
           color: #FFF;
           background: black url(/assets/bioart/images/layout/menubar_arrow.png)  0.4em no-repeat;
@@ -132,7 +133,7 @@ footer {
   background: $headerblue url(/assets/bioart/images/layout/green_dots_small.png) repeat;
   min-height: 7.5rem;
   padding: 2rem 0;
-  
+  font-size: 1rem;
   .address {
 
     p {
@@ -152,6 +153,7 @@ footer {
     input[type=text] {
       float: left;
       outline: none;
+      box-shadow: none;
       font-family: $titillium;
       border: none;
       padding-left: 20px;
