--- a/app/assets/themes/bioart/stylesheets/homepage.css.scss
+++ b/app/assets/themes/bioart/stylesheets/homepage.css.scss
@@ -43,7 +43,8 @@
     font-family: $rubik;
     color: #000;
     text-transform: uppercase;
-    font-size: 5.659em;
+    font-size: 5rem;
+    opacity: 0.9;
     @include breakpoint(small only) {
       font-size: 3.4em;
       padding: 2.24rem 0;
@@ -62,9 +63,10 @@
         margin: 0.813em 0.688em;
         font-family: $titillium;
         color: #333;
-        font-size: 1rem;
+        opacity: 0.9;
+        font-size: 0.933rem;
         background-color: $headerblue;
-        padding: 0.5em 0.313em;
+        padding: 0.3em 0.313em;
       }
     }
     .post_content {
@@ -73,8 +75,9 @@
       margin-bottom: 2.2rem;
       opacity: 0.9;
       .title {
-        font-family: $abel;
-        font-size: 1.914em;
+        font-family: $titillium;
+        padding: 0.1em 0.2em; 
+        font-size: 1.4rem;
         line-height: 1.25em;
         font-weight: bold;
         margin-bottom: 1em;
@@ -82,7 +85,7 @@
       }
       .excerpt, .excerpt p {
         font-family: $titillium;
-        font-size: 1.246rem;
+        font-size: 1rem;
         line-height: 1.25em;
         color: #000;
       }
@@ -94,7 +97,7 @@
   min-height: 600px;
   .heading {
     background-color: $headerblue;
-    font-size: 5.625rem;
+    font-size: 5rem;
     @include breakpoint(small only) {
       font-size: 3.4rem;
     }
@@ -117,7 +120,7 @@
         margin: 0 2rem 0 -1rem;
       }
       color: #FFF;
-      font-size: 3.5rem;
+      font-size: 3.25rem;
       clear: left;
       line-height: 1em;
       padding: 0.25rem 0.5rem;
@@ -140,7 +143,7 @@
       }
       p {
         font-size: 1.25rem;
-        font-weight: bold;
+        font-weight: normal;
         font-family: $titillium;
         line-height: 1.8rem;
       }
@@ -248,14 +251,16 @@
     padding: 2.625rem 0;
     font-family: $rubik;
     color: #000;
+    opacity: 0.9;
     text-transform: uppercase;
-    font-size: 5.659em;
+    font-size: 5rem;
     @include breakpoint(small only) {
       font-size: 3.4em;
       padding: 2.24rem 0;
     }
     span.featured {
       color: #FFF;
+      opacity: 0.9;
       padding: 0 0.2em 0 0.4em;
       background-color: $headerblue;
     }
@@ -280,6 +285,7 @@
     }
     .project_content {
       height: 152px;
+      overflow: hidden;
       @include breakpoint(small only) { 
         height: initial;
       }
@@ -288,13 +294,14 @@
       opacity: 0.9;
       padding: 1rem;
       .title {
-        font-size: 1.614em;
+        font-size: 1.4rem;
       }
       .year {
         font-size: 0.8rem;
         font-style: italic;
       }
       .description, .description p {
+   
         font-size: 1rem;
         font-weight: normal;
         line-height: 1.4rem;
@@ -304,6 +311,7 @@
 }
 
 .contact {
+  display: none;
   background: #FFF url(/assets/bioart/images/layout/blue_halftone.png) repeat;
   padding: 3rem 0 5.375rem 0 ;
   .text {
