--- a/app/assets/themes/bioart/stylesheets/posts.css.scss
+++ b/app/assets/themes/bioart/stylesheets/posts.css.scss
@@ -42,7 +42,8 @@
         color: #666;
       }
       .title {
-        font-family: $abel;
+        font-family: $titillium;
+        padding: 0.1em 0.2em;
         font-size: 1.4em;
         line-height: 1.25em;
         font-weight: bold;
