--- a/app/views/themes/bioart/posts/show.html.haml
+++ b/app/views/themes/bioart/posts/show.html.haml
@@ -73,7 +73,7 @@
                   });
                   wavesurfer_#{sound.id.to_s}.load('#{sound.soundfile.url}');
                   
-          = raw clean_whitespace(sanitize(@post.body, tags: %w{img a p br i em bold strong b u}, attr: %w{href src}))
+          = raw clean_whitespace(sanitize(@post.body, tags: %w{img a p br i em bold strong b u}, attr: %w{href target src}))
         .navigation
           - if @project.nil?
             - unless @post.previous.nil?
