--- a/app/views/themes/bioart/admin/activities/_form.html.haml
+++ b/app/views/themes/bioart/admin/activities/_form.html.haml
@@ -19,6 +19,8 @@
   .row
     .small-12.large-8.columns= f.input :project, label: 'Associate to project?', hint: 'If selected, a link to this project will be created on the activity page'
   .row
+    .small-12.large-8.columns= f.input :postcategory, label: 'Associate to post category?', hint: 'If selected, a link to this all posts with this category will be created on the activity page'    
+  .row
     .small-12.columns= f.input :description, as: :text, input_html: {class: :ckeditor}
   .row
     .small-12.large-8.columns= f.input :start_at, as: :string, input_html: {:required => '', class: :fdatepicker}
