hide responsible organisations

--- a/app/views/themes/bioart/admin/activities/_form.html.haml
+++ b/app/views/themes/bioart/admin/activities/_form.html.haml
@@ -26,8 +26,8 @@
     .small-12.large-8.columns= f.input :start_at, as: :string, input_html: {:required => '', class: :fdatepicker}
   .row
     .small-12.large-8.columns= f.input :end_at, as: :string, input_html: {class: :fdatepicker}
-  .row
-    .small-12.large-8.columns= f.input :responsible_organisation_ids, collection: Partner.all,  input_html: {class: :chosen_select}, multiple: true, label: 'Responsible organisations'
+  / .row
+  /   .small-12.large-8.columns= f.input :responsible_organisation_ids, collection: Partner.all,  input_html: {class: :chosen_select}, multiple: true, label: 'Responsible organisations'
 
   .row
     .small-12.large-8.columns= f.input :tags, hint: 'Separate with commas'    
