--- a/app/views/themes/bioart/admin/partners/_form.html.haml
+++ b/app/views/themes/bioart/admin/partners/_form.html.haml
@@ -11,6 +11,8 @@
   .row
     .large-5.small-12.columns= f.input :name, input_html: {required: ''}
   .row
+    .large-5.small-12.columns= f.input :is_funder, as: :boolean
+  .row
     .large-5.small-12.columns= f.input :website
   .row
     .large-5.small-12.columns
