--- a/app/assets/themes/bioart/stylesheets/posts.css.scss
+++ b/app/assets/themes/bioart/stylesheets/posts.css.scss
@@ -19,9 +19,10 @@
   .post {
     .post_image {
       overflow: hidden;
-      height: 320px;
+      padding-bottom: 100%;
  
       .hashtag {
+        position: absolute;
         float: left;
         margin: 0.813em 0.688em;
         font-family: $titillium;
