--- a/app/assets/themes/bioart/stylesheets/posts.css.scss
+++ b/app/assets/themes/bioart/stylesheets/posts.css.scss
@@ -61,6 +61,13 @@
         font-size: 1rem;
         line-height: 1.25em;
       }
+      .index_author {
+        font-family: $titillium;
+        font-size: 0.8em;
+        line-height: 1.1em;
+        color: #666;
+        margin-top: 1.2rem;
+      }
     }
   }  
   
