--- a/app/assets/themes/bioart/stylesheets/posts.css.scss
+++ b/app/assets/themes/bioart/stylesheets/posts.css.scss
@@ -136,7 +136,7 @@
         margin-bottom: 1em;
         background-color: #000;
         background: #fff url(/assets/bioart/images/layout/menubar_arrow_blk.png) 0.4em no-repeat;
-        border: 1px solid #C5C5C5;
+        border: 1px solid #000;
         padding: 0.4em 0.4em 0.4em 2em;
         &.prev_post {
           background: #fff url(/assets/bioart/images/layout/menubar_arrow_reverse_blk.png) 0.4em no-repeat;
@@ -144,9 +144,9 @@
         padding: 0.5rem 0.4em 0.5em 1.8em;
         a {
           text-transform: uppercase;
-          color: #C5C5C5;
+          color: #000;
           &:hover {
-            color: #FFF;
+            color: #C5C5C5;
           }
         }
       }
