--- a/app/assets/themes/bioart/stylesheets/projects.css.scss
+++ b/app/assets/themes/bioart/stylesheets/projects.css.scss
@@ -221,7 +221,7 @@
     
     }
     .body {
-      padding: 4rem 2rem 0 2rem;
+      padding: 2rem 2rem 4rem 2rem;
       font-family: $titillium;
       a {
         color: $red;
@@ -229,6 +229,22 @@
       h3 {
         font-weight: bold;
         font-size: 1.3rem;
+      }
+    }
+    .side_link {
+      float: left;
+      clear: both;
+      margin-bottom: 1em;
+//      background-color: #;
+      background: white url(/assets/bioart/images/layout/menubar_arrow_blk.png)  0.4em no-repeat;
+      border: 1px solid #000;
+      padding: 0.4em 0.4em 0.4em 2em;
+      a {
+        text-transform: uppercase;
+        color: #000;
+        &:hover {
+          color: #C5C5C5;
+        }
       }
     }
   }
