--- a/app/views/themes/bioart/admin/calls/_form.html.haml
+++ b/app/views/themes/bioart/admin/calls/_form.html.haml
@@ -13,6 +13,8 @@
   .row
     .large-5.small-12.columns= f.input :symposium, label: 'Is this connected to an event?', as: :select
   .row
+    .large-5.small-12.columns= f.input :project, label: 'Is this connected to a project?', as: :select    
+  .row
     .large-5.small-12.columns= f.input :start_at, as: :string,  :input_html => { :class => "fdatepicker", required: ''} 
   .row
     .large-5.small-12.columns= f.input :end_at, as: :string,  :input_html => { :class => "fdatepicker", required: ''}, label: 'Deadline'
