--- a/app/views/themes/bioart/projects/index.html.haml
+++ b/app/views/themes/bioart/projects/index.html.haml
@@ -7,6 +7,7 @@
           Projects
           
     - @ongoing.each do |project|
+      - next if project.slug == 'ars-bioarctica'
       = link_to project, class: [:project] do
         .row[project]
           .small-12.columns
