--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -56,7 +56,7 @@
             .logo.medium-2.columns.small-12
               BIOART
               SOCIETY
-          .title-bar.medium-9.columns.small-12
+          .title-bar.large-9.columns.small-12.medium-12
             .title-bar-left
               %ul.horizontal.menu
                 %li= link_to 'Blog', posts_path
