border and spacing

--- a/app/assets/themes/bioart/stylesheets/posts.css.scss
+++ b/app/assets/themes/bioart/stylesheets/posts.css.scss
@@ -122,6 +122,8 @@
         padding: 1rem 0;
       }
       .controls {
+        margin-bottom: 3rem;
+        border-bottom: 1px solid black;
         button {
           &.primary {
             background-color: white;
