black border on association rules link, and linked to static page they haven't created yet

--- a/app/views/themes/bioart/home/about.html.haml
+++ b/app/views/themes/bioart/home/about.html.haml
@@ -8,7 +8,7 @@
       .text
         .excerpt
           = raw @about_text.excerpt
-          .side_link= link_to 'Association rules', '#'
+          .side_link= link_to 'Association rules', page_path('association-rules')
   
   .row
     .small-12.medium-6.columns.member_box
