--- a/app/assets/themes/bioart/stylesheets/pages.css.scss
+++ b/app/assets/themes/bioart/stylesheets/pages.css.scss
@@ -76,15 +76,15 @@
       float: left;
       clear: both;
       margin-bottom: 1em;
-      background-color: #000;
+//      background-color: #000;
       background: white url(/assets/bioart/images/layout/menubar_arrow_blk.png)  0.4em no-repeat;
-      border: 1px solid #C5C5C5;
+      border: 1px solid #000;
       padding: 0.4em 0.4em 0.4em 2em;
       a {
         text-transform: uppercase;
-        color: #C5C5C5;
+        color: #000;
         &:hover {
-          color: #FFF;
+          color: #C5C5C5;
         }
       }
     }
